...

let response = """
{
                    "type": "table",
                    "_id": "65c77d9a72b975711c99bd50",
                    "identifier": "field_65c77d9e631e9e53679fdda4",
                    "title": "Table",
                    "description": "",
                    "value": [
                        {
                            "_id": "65c7643b72de876e31fc30f7",
                            "deleted": false,
                            "cells": {
...
